--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,18 +78,112 @@ body .window {
 
 
 /* registration.html */
-.dial {
+.registration-wrap {
+  background-color: $dk-orange-light;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.hero-wrap {
+  background-color: #FFFFFF;
+  opacity: 0.9;
+  border-radius: 8px;
   box-sizing: border-box;
-  width: 100%;
-  border: 1px solid #333;
-  height: 130px;
-  .key {
-    float: left;
-    box-sizing: border-box;
-    width: 30%;
-    height: 30px;
-    border: 1px solid red;
+  padding: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #CCCCCC;
+
+  h2 {
+    color: $dk-orange;
+    margin-bottom: 0;
+  }
+  table {
+    width: 100%;
+    margin-bottom: 0;
+  }
+  button.expand {
+    margin: 0;
   }
 }
 
+.tables-area {
+  width: 100%;
+  height: 240px;
+  margin-bottom: 10px;
+  .table-type-wrap {
+    width: 50%;
+    height: 80px;
+    float: left;
+    padding: 10px;
+    position: relative;
+
+    label {
+      position: absolute;
+      width: 95%;
+      height: 95%;
+      margin: 0;
+      padding: 0;
+      top: 2%;
+      left: 2%;
+      text-align: center;
+      background-color: $dk-gray;
+      border: 2px solid $dk-orange;
+      font-size: 20px;
+      line-height: 76px;
+    }
+    label.active {
+      border: 2px solid $dk-green;
+      color: $dk-green;
+    }
+    label.active:after {
+      font-family: "foundation-icons";
+      content: "\f126";
+      font-size: 20px;
+    }
+  }
+}
+
+.phone-input {
+  border: 2px solid $dk-gray;
+  border-radius: 5px;
+  width: 100%;
+  height: 60px;
+  font-size: 34px;
+  padding: 6px;
+  margin-bottom: 10px;
+  line-height: 44px;
+  text-align: center;
+}
+
+.phone-error {
+  border: 2px solid $dk-orange;
+}
+.phone-success {
+  border: 2px solid $dk-green;
+}
+
+.dial {
+  width: 100%;
+  height: 450px;
+  padding: 20px;
+  .key-wrap {
+    float: left;
+    width: 33.3333%;
+    height: 100px;
+    padding: 10px;
+    .key {
+      box-sizing: border-box;
+      border: 2px solid $dk-orange-light;
+      background-color: $dk-gray;
+      border-radius: 5px;
+      width: 100%;
+      height: 100%;
+      font-size: 36px;
+      text-align: center;
+      line-height: 76px;
+    }
+  }
+}
 
