--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,15 +92,11 @@ body .window {
   border-radius: 8px;
   box-sizing: border-box;
   padding: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border: 1px solid #CCCCCC;
 
   h2 {
     color: $dk-orange;
-    margin-bottom: 0;
-  }
-  table {
-    width: 100%;
     margin-bottom: 0;
   }
   button.expand {
@@ -108,10 +104,13 @@ body .window {
   }
 }
 
+.small-hero-wrap {
+  padding: 5px;
+}
+
 .tables-area {
   width: 100%;
-  height: 240px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   .table-type-wrap {
     width: 50%;
     height: 80px;
@@ -132,6 +131,7 @@ body .window {
       border: 2px solid $dk-orange;
       font-size: 20px;
       line-height: 76px;
+      overflow: hidden;
     }
     label.active {
       border: 2px solid $dk-green;
@@ -150,18 +150,29 @@ body .window {
   border-radius: 5px;
   width: 100%;
   height: 60px;
-  font-size: 34px;
+  font-size: 36px;
   padding: 6px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   line-height: 44px;
   text-align: center;
-}
-
-.phone-error {
+  letter-spacing: 3px;
   border: 2px solid $dk-orange;
+}
+.phone-waiting {
+  letter-spacing: normal;
+}
+.phone-waiting:after {
+  content: '请用右侧键盘输入';
+  color: $dk-orange;
+  font-size: 24px;
 }
 .phone-success {
   border: 2px solid $dk-green;
+  color: $dk-green;
+}
+.phone-success:after {
+  font-family: "foundation-icons";
+  content: "\f126";
 }
 
 .dial {
@@ -183,7 +194,40 @@ body .window {
       font-size: 36px;
       text-align: center;
       line-height: 76px;
+      cursor: pointer;
+      overflow: hidden;
     }
   }
 }
 
+
+table.current-registration {
+  width: 100%;
+  margin-bottom: 10px;
+  th {
+    text-align: center;
+    font-size: 18px;
+  };
+  td {
+    text-align: center;
+    color: $dk-green;
+    font-size: 36px;
+    line-height: 36px;
+  }
+  td.next-one {
+    width: 100px;
+    color: $dk-orange;
+    font-size: 24px;
+  }
+}
+
+.support-logo {
+  background: url("/images/main_logo.png") no-repeat;
+  background-size: 125px 50px;
+  padding-top: 52px;
+  font-family: "Microsoft YaHei";
+  p {
+    margin-bottom: 0;
+    text-align: center;
+  }
+}
