add link to manage page in registration page

--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -86,6 +86,7 @@
             </div>
             <div class="medium-2 small-12 columns">
               <div class="support-logo">
+                <a ui-sref="console.overview"></a>
                 <p>提供技术支持</p>
                 <p><i class="fi-telephone"></i>&nbsp;13020145329</p>
               </div>
