--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,7 +92,7 @@ body .window {
   border-radius: 8px;
   box-sizing: border-box;
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   border: 1px solid #CCCCCC;
 
   h2 {
@@ -110,7 +110,7 @@ body .window {
 
 .tables-area {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   .table-type-wrap {
     width: 50%;
     height: 80px;
@@ -152,7 +152,7 @@ body .window {
   height: 60px;
   font-size: 36px;
   padding: 6px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   line-height: 44px;
   text-align: center;
   letter-spacing: 3px;
@@ -226,6 +226,14 @@ table.current-registration {
   background-size: 125px 50px;
   padding-top: 52px;
   font-family: "Microsoft YaHei";
+  position: relative;
+  a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
   p {
     margin-bottom: 0;
     text-align: center;
