--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -101,7 +101,10 @@
 
 
 <script type="text/ng-template" id="return_registration.html">
-    <p>欢迎光临{{ restaurant.name }}，您选择了餐桌类型{{ table_type.name }}，获取了号码{{ registration.queue_number }}</p>
+  <div class="register-notify">
+    <p>您已获取 <span class="register-number">{{ table_type.name }}&nbsp;{{ registration.queue_number }}</span>号</p>
+    <p>稍后您会收到确认短信，祝您用餐愉快！</p>
     <hr>
-    <button class="button tiny right" ng-click="close()">OK</button>
+    <button class="button expand tiny" ng-click="close()">知道了，好嗨森！</button>
+  </div>
 </script>
