--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -105,6 +105,6 @@
     <p>您已获取 <span class="register-number">{{ table_type.name }}&nbsp;{{ registration.queue_number }}</span>号</p>
     <p>稍后您会收到确认短信，祝您用餐愉快！</p>
     <hr>
-    <button class="button expand tiny" ng-click="close()">知道了，好嗨森！</button>
+    <button class="button expand medium" ng-click="close()">知道了，好嗨森！</button>
   </div>
 </script>
