fix some problem

--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -74,7 +74,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="next-one">下一位</td>
+                    <td class="next-one">叫号至</td>
                     <td ng-repeat="table_type in table_types">
                       <span ng-if="table_type.current_registration==null">空闲</span>
                       <span ng-if="table_type.current_registration!=null">{{ table_type.current_registration.queue_number }}</span>
