--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -91,7 +91,7 @@ body .window {
   opacity: 0.9;
   border-radius: 8px;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #CCCCCC;
 
@@ -117,7 +117,6 @@ body .window {
     float: left;
     padding: 10px;
     position: relative;
-
     label {
       position: absolute;
       width: 95%;
@@ -159,6 +158,7 @@ body .window {
   border: 2px solid $dk-orange;
 }
 .phone-waiting {
+  line-height: 34px;
   letter-spacing: normal;
 }
 .phone-waiting:after {
