improve style of registration manage table

--- a/app/views/console_overview.html
+++ b/app/views/console_overview.html
@@ -1,5 +1,8 @@
-<tabset>
-    <tab heading="{{ table_type.name }} ({{ table_type.queue_registrations.length }})" active="$first" ng-repeat="table_type in table_types">
+<tabset vertical="true">
+  <tab active="$first" ng-repeat="table_type in table_types">
+    <tab-heading>
+      {{ table_type.name }}<span class="round warning label">{{ table_type.queue_registrations.length }}</span>
+    </tab-heading>
         <h4>当前号码</h4>
         <table>
             <thead>
