--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,7 +25,7 @@
 //  @import "../../bower_components/foundation/scss/foundation/components/inline-lists";
 //  @import "../../bower_components/foundation/scss/foundation/components/joyride";
 //  @import "../../bower_components/foundation/scss/foundation/components/keystrokes";
-//  @import "../../bower_components/foundation/scss/foundation/components/labels";
+  @import "../../bower_components/foundation/scss/foundation/components/labels";
 //  @import "../../bower_components/foundation/scss/foundation/components/magellan";
 //  @import "../../bower_components/foundation/scss/foundation/components/orbit";
 //  @import "../../bower_components/foundation/scss/foundation/components/pagination";
