--- a/app/views/console_overview.html
+++ b/app/views/console_overview.html
@@ -1,7 +1,7 @@
-<tabset vertical="true">
+<tabset vertical="true" class='registration-table'>
   <tab active="$first" ng-repeat="table_type in table_types">
     <tab-heading>
-      {{ table_type.name }}<span class="round warning label">{{ table_type.queue_registrations.length }}</span>
+      {{ table_type.name }}<span class="round success label">{{ table_type.queue_registrations.length }}</span>
     </tab-heading>
         <h4>当前号码</h4>
         <table>
