--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -1326,11 +1326,11 @@ $off-canvas-overlay-box-shadow: 0;
 // $include-html-tabs-classes: $include-html-classes;
 
 // $tabs-navigation-padding: rem-calc(16);
-// $tabs-navigation-bg-color: $silver  ;
-// $tabs-navigation-active-bg-color: $white;
+$tabs-navigation-bg-color: $dk-gray;
+$tabs-navigation-active-bg-color: $dk-orange;
 // $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
 // $tabs-navigation-font-color: $jet;
-// $tabs-navigation-active-font-color: $tabs-navigation-font-color;
+$tabs-navigation-active-font-color: $white;
 // $tabs-navigation-font-size: rem-calc(16);
 // $tabs-navigation-font-family: $body-font-family;
 
