enhancement of admin style

--- a/app/views/console_change_passwd.html
+++ b/app/views/console_change_passwd.html
@@ -3,7 +3,7 @@
 
 <form ng-submit="change_passwd()">
     <div class="row">
-        <div class="large-6 columns">
+        <div class="medium-9 columns">
             <label>新密码
                 <input placeholder="请输入密码" ng-model="password1"
                        ng-maxlength="24" type="password"
