--- a/app/views/console_table.html
+++ b/app/views/console_table.html
@@ -15,7 +15,7 @@
         <td>{{ table_type.name }}</td>
         <td>{{ table_type.min_seats }}</td>
         <td>{{ table_type.max_seats }}</td>
-        <td><a ng-click="edit(table_type)">编辑</a></td>
+        <td><button class="button tiny" ng-click="edit(table_type)">编辑</button></td>
     </tr>
     </tbody>
 </table>
