--- a/app/views/console_restaurant.html
+++ b/app/views/console_restaurant.html
@@ -1,24 +1,19 @@
+<h2>餐厅配置</h2>
+
 <form ng-submit="update()">
 
     <div class="row">
-        <div class="large-9 columns">
+        <div class="medium-9 columns">
             <label>餐厅名称
-                <input type="text" ng-model="restaurant_update.name" placeholder="{{ restaurant.name }}" />
+                <input type="text" ng-model="restaurant_update.name" placeholder="{{ restaurant.name }}"/>
             </label>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="large-9 columns">
             <label>餐厅背景图
                 <input type="file" file-upload="background"/>
             </label>
+            <input type="submit" name="" value="更新" class="button expand tiny"/>
         </div>
     </div>
 
-    <div>
-    <input type="submit" value="更新"/>
-    </div>
 
 </form>
 
