--- a/app/views/console_history.html
+++ b/app/views/console_history.html
@@ -2,6 +2,7 @@
     <thead>
     <tr>
         <th width="150">客户手机号</th>
+        <th width="150">桌子类型</th>
         <th width="150">所得号码</th>
         <th width="150">开始时间</th>
         <th width="150">结束时间</th>
@@ -11,6 +12,7 @@
     <tbody>
     <tr ng-repeat="reg in registrations">
         <td>{{ reg.phone }}</td>
+        <td>{{ reg.table_name }}</td>
         <td>{{ reg.queue_number }}</td>
         <td>{{ reg.create_time }}</td>
         <td>{{ reg.end_time }}</td>
