--- a/app/views/console_restaurant.html
+++ b/app/views/console_restaurant.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="medium-9 columns">
             <label>餐厅名称
-                <input type="text" ng-model="restaurant_update.name" placeholder="{{ restaurant.name }}"/>
+                <input type="text" ng-model="restaurant_update.name"/>
             </label>
             <label>餐厅背景图
                 <input type="file" file-upload="background"/>
