--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -75,7 +75,7 @@
                 <tbody>
                   <tr>
                     <td class="next-one">叫号至</td>
-                    <td ng-repeat="table_type in table_types">
+                    <td ng-repeat="table_type in update_table_types">
                       <span ng-if="table_type.current_registration==null">空闲</span>
                       <span ng-if="table_type.current_registration!=null">{{ table_type.current_registration.queue_number }}</span>
                     </td>
