--- a/app/views/console_history.html
+++ b/app/views/console_history.html
@@ -1,11 +1,11 @@
 <table>
     <thead>
     <tr>
-        <th width="150">客户手机号</th>
-        <th width="150">桌子类型</th>
-        <th width="150">所得号码</th>
-        <th width="150">开始时间</th>
-        <th width="150">结束时间</th>
+        <th width="150">手机号</th>
+        <th width="150">餐桌类型</th>
+        <th width="150">等位号</th>
+        <th width="150">取号时间</th>
+        <th width="150">叫号时间</th>
         <th width="150">状态</th>
     </tr>
     </thead>
@@ -20,3 +20,7 @@
     </tr>
     </tbody>
 </table>
+
+<div data-alert class="alert-box secondary text-center">
+  只显示最近50条记录
+</div>
