fix bug of edit strategy

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,7 +39,7 @@ body .window {
 // off-canvas
 ul.off-canvas-list {
   li.divider {
-    border-bottom: 3px solid #BBB;
+    border-bottom: 2px solid #DDD;
   }
 }
 
