small title improve

--- a/app/views/console_strategy.html
+++ b/app/views/console_strategy.html
@@ -6,9 +6,9 @@
 <table>
     <thead>
     <tr>
-        <th width="200">超时时间（分钟）</th>
+        <th width="200">等位时间（分钟）</th>
         <th width="150">奖励方式</th>
-        <th width="150">奖励内容</th>
+        <th width="150">奖励内容（礼物或折扣百分比）</th>
         <th>操作</th>
     </tr>
     </thead>
