--- a/app/views/retrieve_passwd.html
+++ b/app/views/retrieve_passwd.html
@@ -1,57 +1,49 @@
+<div class="row">
+  <form>
+    <div class="medium-8 medium-offset-2 columns">
+      <h3 class="login-title"><a ui-sref="login"></a>找回密码</h3>
+      <div class="row">
+        <div class="medium-3 columns">
+          <label for="username" class="right inline">手机号</label>
+        </div>
+        <div class="medium-6 columns end">
+          <input ng-model="username"
+          type="number"
+          name="username"
+          id="username"
+          placeholder="请输入登陆手机号"/>
+        </div>
+      </div>
 
-<div class="row" data-ng-cloak>
-    <div class="large-12 columns">
-        <h2>找回密码</h2>
+      <div class="row">
+        <div class="medium-3 columns">
+          <label for="captcha" class="right inline">验证码</label>
+        </div>
+        <div class="medium-6 columns">
+          <input ng-model="captcha"
+          type="text"
+          name="captcha"
+          id="captcha"
+          placeholder="请输入验证码"/>
+        </div>
 
-        <form>
-            <div class="row">
+        <div class="medium-3 columns">
+          <button class="button secondary tiny" ng-disabled="!username || time_left > 0" ng-click="create_captcha()">
+            获取验证码 <span ng-show="time_left > 0">（{{ time_left }}）</span>
+          </button>
+        </div>
+      </div>
 
-                <div class="large-8 columns">
-                    <div class="row">
-                        <div class="small-3 columns">
-                            <label for="username" class="right inline">手机号</label>
-                        </div>
-                        <div class="small-6 columns end">
-                            <input ng-model="username"
-                                   type="number"
-                                   name="username"
-                                   id="username"
-                                   placeholder="请输入登陆手机号"/>
-                        </div>
-                    </div>
+      <div class="row">
+        <div class="medium-6 medium-offset-3 columns">
+          <button class="button expand"  ng-disabled="!username || !captcha" ng-click="retrieve_passwd()">
+            确定
+          </button>
+        </div>
+      </div>
 
-                    <div class="row">
-                        <div class="small-3 columns">
-                            <label for="captcha" class="right inline">验证码</label>
-                        </div>
-                        <div class="small-6 columns">
-                            <input ng-model="captcha"
-                                   type="text"
-                                   name="captcha"
-                                   id="captcha"
-                                   placeholder="请输入验证码"/>
-                        </div>
-
-                        <div class="small-3 columns">
-                            <button class="button secondary tiny" ng-disabled="!username || time_left > 0" ng-click="create_captcha()">
-                                获取验证码 <span ng-show="time_left > 0">（{{ time_left }}）</span>
-                            </button>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="small-6 columns small-offset-3">
-                            <button class="button tiny expand"  ng-disabled="!username || !captcha" ng-click="retrieve_passwd()">
-                                确定
-                            </button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </form>
     </div>
+  </form>
 </div>
 
 
