删除策略加上confirm

--- a/app/views/console_strategy.html
+++ b/app/views/console_strategy.html
@@ -71,3 +71,14 @@
 
 </script>
 
+
+<script type="text/ng-template" id="strategy_del.html">
+    <p>确认删除该策略？</p>
+    <hr>
+
+    <div class="button-group">
+        <button class="button" ng-click="confirm()">确认</button>
+        <button class="button secondary" ng-click="cancel()">取消</button>
+    </div>
+
+</script>
