--- a/app/views/console.html
+++ b/app/views/console.html
@@ -5,6 +5,7 @@
         <div class="name">
             <div class="logo-title hide-for-small-only">点快</div>
             <div class="logo-subtitle hide-for-small-only">diankuai.cn</div>
+            <a href="http://www.diankuai.cn/" class="home-link hide-for-small-only"></a>
 
             <span class="show-for-small-only text-center restaurant-title">{{restaurant.name}}</span>
         </div>
