--- a/app/homepage/feature_files/function.css
+++ b/app/homepage/feature_files/function.css
@@ -102,6 +102,9 @@ p.part_img_8_right{  right: 5px; }
 .part_img_10{ width: 870px; height: 490px; margin: 0 auto; position: relative; background: url(/static/index6/images/index_70.png) no-repeat center center;  }
 .part_img_10 p{ position: absolute; top: 200px; width: 300px; left: 580px; }
 
+#cnzz_stat_icon_1254773847 {
+  display: none;
+}
 
 
 
