add email with marketing

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -34,7 +34,8 @@
 <div class="row">
   <div class="medium-8 medium-offset-2 columns">
     <div class="copyright text-center">
-      <h4>业务咨询、市场合作&nbsp;&nbsp;&nbsp;&nbsp;<i class="fi-telephone"></i>&nbsp;13021045329</h4>
+      <h4>业务咨询、市场合作</h4>
+      <h4><i class="fi-mail"></i>&nbsp;<a href="mailto:marketing@diankuai.cn">marketing@diankuai.cn</a>&nbsp;&nbsp;&nbsp;<i class="fi-telephone"></i>&nbsp;13021045329</h4>
       <div>Copyright &copy; 2015&nbsp;&nbsp;北京邦邦科技有限公司</div>
       <div>京ICP备15011685号</div>
     </div>
